--- a/app/views/Templates/js/infinitescroll.scala.html
+++ b/app/views/Templates/js/infinitescroll.scala.html
@@ -1,7 +1,7 @@
 @(defaultcontext:Boolean=true,divid: String="")(PCP: Html)
 
 	$(window).scroll(function () { 
-		   if ($(window).scrollTop() >= $(document).height() - window.innerHeight - 10) {
+		   if ($(window).scrollTop() >= $(document).height() - (window.innerHeight + 500) ) {
 			   @if(defaultcontext){
 			   		$('#prloadmore').trigger('click');  
 			   }else{ @PCP }
