--- a/app/views/shop.scala.html
+++ b/app/views/shop.scala.html
@@ -464,7 +464,7 @@ width:70px;height:70px;vertical-align: baseline!important;
 	*@	
 		@Templates.su.jready{
 			var pxBDocInit= PBDocInit(ldiv);
-				
+				//alert('inside jready');
 			@Templates.js.infinitescroll(false){ 
 				pxBDocInit.loadMore();
 			}
@@ -655,6 +655,8 @@ width:70px;height:70px;vertical-align: baseline!important;
 				 
 				self.loadMore = function()
 				{
+					
+					//alert('loading more! w + 500');
 					if(self.fr.page!==-1 && self.loadProd($.param(self.fr)))
 		  				self.fr.page++;
 				}
