blog list overflow

--- a/app/views/Templates/su/Singleblog.scala.html
+++ b/app/views/Templates/su/Singleblog.scala.html
@@ -130,7 +130,7 @@
           
           @if(blg.getImages()!=null){
           <!-- Begin .col-lg-8 images...-->
-          <div id="imgs@{blg.id}" class="col-lg-6 col-md-8 col-sm-12 col-xs-12 col-12" style="margin-bottom: 50px;padding-bottom: 50px;height: 805px;" data-sticky_column>
+          <div id="imgs@{blg.id}" class="col-lg-6 col-md-8 col-sm-12 col-xs-12 col-12" style="margin-bottom: 50px;padding-bottom: 50px;height: 805px; overflow: hidden; outline: none;" data-sticky_column>
            @for(img <- blg.getImages()) {
            		@if(img.isVideo==false){
            			<img src="@img.getURL()" class="img-responsive" style="padding-bottom: 10px;"/>
