--- a/app/views/blogpage.scala.html
+++ b/app/views/blogpage.scala.html
@@ -19,7 +19,7 @@
 				@if(controllers.Application.verifyEmail()){
 					<div class="row">
 						<div class="logout blbanner">
-							<div class="message"><span class="bold">Posts are ideas, stories, and facts added by the community. Click on add new post to create your own.</span></div>
+							<div class="message"><span class="bold">Posts are ideas, stories, and facts added by the community. Click on Add New Post to create your own.</span></div>
 							<div class="options">
 								<div class="option"><a class="btn btn-danger brectangle btn-small" href="@routes.Application.GetAddBlog()">Add New Post</a></div>
 							</div>
