users who to follow

--- a/app/views/account/signup/chooseinfluencers.scala.html
+++ b/app/views/account/signup/chooseinfluencers.scala.html
@@ -17,7 +17,7 @@
 	   <!-- Begin .row -->
 	<div class="row">
 		<div id="legend">
-	    	<legend>Select a few influencers, best in selected categories.</legend>
+	    	<legend>Try following some of these interesting users:</legend>
 	    </div>
 	    <div class="onnextline text-right">
 	    	<a href="@routes.Signup.SetUsersInfluencers("skip")" class="btn btn-danger brectangle">Skip</a>
