--- a/app/views/Templates/su/ubko.scala.html
+++ b/app/views/Templates/su/ubko.scala.html
@@ -26,7 +26,7 @@
 		
            
 	</div>
-	<div class="text-center" data-bind="visible:someprod().length == 0"><h2>No Likes!!</h2></div>
+	<div class="text-center" data-bind="visible:someprod().length == 0"><h2></h2></div>
 	<div data-bind="foreach: someprod,visible:someprod().length > 0">
 		<div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
 	       	<a  data-bind="attr:{href:pl}" class="thumbnail shortproduct">
