blog & home title, pinterest stats

--- a/app/views/Templates/MasterTemplate.scala.html
+++ b/app/views/Templates/MasterTemplate.scala.html
@@ -15,6 +15,7 @@
   ga('send', 'pageview');
 
 </script>
+<meta name="p:domain_verify" content="692f01d77c712372b6dc95e69bec1e5f"/>
   </head>
 
   <body ng-app="bl-master">
