--- a/app/views/Templates/su/SingleBlogPage.scala.html
+++ b/app/views/Templates/su/SingleBlogPage.scala.html
@@ -531,7 +531,7 @@
 			}
 	}else{	
 		@Templates.MasterTemplate(){
-			@Templates.pagehead("Blog @Boozology"){@pst(isadmin)}
+			@Templates.pagehead(blg.title){@pst(isadmin)}
 		}{
 			@Templates.pageheader(){		
 			}{ }
