--- a/app/views/Templates/su/Singleblog.scala.html
+++ b/app/views/Templates/su/Singleblog.scala.html
@@ -383,7 +383,7 @@
 			}
 	}else{	
 		@Templates.MasterTemplate(){
-			@Templates.pagehead("Blog @Boozology"){@pst(isadmin)}
+			@Templates.pagehead("Recent Posts"){@pst(isadmin)}
 		}{
 			@Templates.pageheader(){		
 			}{ }
