--- a/app/views/blogpage.scala.html
+++ b/app/views/blogpage.scala.html
@@ -11,7 +11,7 @@
 }
 
 @MasterTemplate(){
-	@pagehead("Blog @Boozology"){@pst}
+	@pagehead("Recent Posts"){@pst}
 }{
 	@pageheader(){
 		@subjectPresent(){
