--- a/app/views/shop.scala.html
+++ b/app/views/shop.scala.html
@@ -26,7 +26,7 @@ width:70px;height:70px;vertical-align: baseline!important;
 <script src="@routes.Assets.at("bl/js/typeahead.min.js")"></script>
 }
 @Templates.MasterTemplate(){
-	@Templates.pagehead(" Boozology - Discover amazing products "){@ps}
+	@Templates.pagehead(" Boozology - Beer, Wine, and All Things Booze "){@ps}
 }{
 	@Templates.pageheader(){		
 				
