ms verify posts and products on header

--- a/app/views/Templates/MasterTemplate.scala.html
+++ b/app/views/Templates/MasterTemplate.scala.html
@@ -16,6 +16,7 @@
 
 </script>
 <meta name="p:domain_verify" content="692f01d77c712372b6dc95e69bec1e5f"/>
+<meta name="msvalidate.01" content="6F4B3593DDD017F33AB355B270116E04" />
   </head>
 
   <body ng-app="bl-master">
