--- a/app/views/Templates/su/SingleBlogPage.scala.html
+++ b/app/views/Templates/su/SingleBlogPage.scala.html
@@ -141,6 +141,11 @@
             
             
             <!-- Begin .comments-wrap -->
+            <!-- fb comments ini -->
+            <div class="fb-comments" data-href="http://www.boozology.com/" data-numposts="5"></div>
+            <!-- fb comments end -->
+           
+           @*
             <div id="blog_comment_@{blg.id}" class="comments-wrap">
               
              <div id="cmmHold"></div>
@@ -163,6 +168,7 @@
               </div>
               <!-- End post-comment-form -->
             </div>
+            *@
             <!-- End .comments-wrap -->
             
           </div>
