--- a/app/views/Templates/su/SingleBlogPage.scala.html
+++ b/app/views/Templates/su/SingleBlogPage.scala.html
@@ -142,7 +142,7 @@
             
             <!-- Begin .comments-wrap -->
             <!-- fb comments ini -->
-            <div class="fb-comments" data-href="http://www.boozology.com/" data-numposts="5"></div>
+            <div class="fb-comments" data-href="@routes.Application.GetBlogPage(blg.id).absoluteURL()" data-numposts="5" data-width="450"></div>
             <!-- fb comments end -->
            
            @*
