--- a/public/style.css
+++ b/public/style.css
@@ -758,7 +758,9 @@ ul.dropdown-menu > li > a:hover, ul.dropdown-menu > li > a:focus, ul.dropdown-su
 	color: #eee;
 }
 
-
+.fb-comments, .fb-comments iframe[style], .fb-comments span {
+   width: 100% !important;
+}
 
 
 /* Chat Widget */
