--- a/app/views/Templates/su/SingleBlogPage.scala.html
+++ b/app/views/Templates/su/SingleBlogPage.scala.html
@@ -7,7 +7,7 @@
 		<meta property="og:title" content="@blg.title"/>
 		<meta property="og:type" content="article"/>
 		<meta property="og:description" content="@blg.htmlLessContent"/>
-		<meta property="og:url" content="@routes.Application.GetBlogPage(blg.id).absoluteURL()"/>
+		<meta property="og:url" content="@routes.Useract.getBlogByPermalink(blg.permaLink).absoluteURL()"/>
 		<meta property="og:updated_time" content="@blg.postedAt.getTime()"/>
 		
 		@for(img <- blg.getImages()) {
@@ -90,7 +90,7 @@
               <ul class="social" style="margin-bottom: 15px;">
                 <li><a  href="#"  title="Share on Facebook" 
 											onclick="window.open(
-													'https://www.facebook.com/sharer/sharer.php?u='+encodeURIComponent('@routes.Application.GetBlogPage(blg.id).absoluteURL(request())'),
+													'https://www.facebook.com/sharer/sharer.php?u='+encodeURIComponent('@routes.Useract.getBlogByPermalink(blg.permaLink).absoluteURL(request())'),
 															'facebook-share-dialog',
 															'width=626,height=436');return false;"><i class="icon-facebook"></i></a></li>
                 <li><a title="Share on Twitter" href="https://twitter.com/intent/tweet?text=Has%20Read%20%20@helper.urlEncode(routes.Application.GetBlogPage(blg.id).absoluteURL(request()))"
@@ -120,7 +120,7 @@
              <!-- Begin .title-wrap -->
             <div class="title-wrap">
               <h3>
-                <a title="@blg.title" href="@routes.Application.GetBlogPage(blg.id)">@blg.title</a>
+                <a title="@blg.title" href="@routes.Useract.getBlogByPermalink(blg.permaLink)">@blg.title</a>
               </h3>
             </div>
             <!-- End .title-wrap -->
@@ -142,7 +142,7 @@
             
             <!-- Begin .comments-wrap -->
             <!-- fb comments ini -->
-            <div class="fb-comments" data-href="@routes.Application.GetBlogPage(blg.id).absoluteURL()" data-numposts="5" data-width="100%"></div>
+            <div class="fb-comments" data-href="@routes.Useract.getBlogByPermalink(blg.permaLink).absoluteURL()" data-numposts="5" data-width="100%"></div>
             <!-- fb comments end -->
            
            @*
@@ -225,7 +225,7 @@
 @*	
 		<div class="post" id="Blog@{blg.id}">
 			<h2 class="title">
-				<a title="@blg.title" href="@routes.Application.GetBlogPage(blg.id)">
+				<a title="@blg.title" href="@routes.Useract.getBlogByPermalink(blg.permaLink)">
 				@blg.title
 				</a>
 			</h2>@if(isadmin){ <a class="gray btn-small" href="@routes.Application.GetEditBlog(blg.id)"><i class="icon-edit"></i>Edit this</a>} @if(isadmin && !isgrouped){ <a class="blogdeletebutton gray btn-small underline" href="javascript:void(0);" data-link="@routes.Useract.RemoveBlog(blg.id)"><i class="icon-remove"></i>Delete</a> }
@@ -328,7 +328,7 @@
 	      <div class="accordion-inner">
 	        <ul class="unstyled text-center">
 	        @for(blg <- Blog.RecentBlogPage(0,40).getList){
-	        	<li class="textcutoverflow"><a href="@routes.Application.GetBlogPage(blg.id)">@blg.title</a></li>
+	        	<li class="textcutoverflow"><a href="@routes.Useract.getBlogByPermalink(blg.permaLink)">@blg.title</a></li>
 	        }
 	        </ul>
 	        <a href="#" class="gray underline pull-right">See All</a>
