--- a/app/views/Templates/su/Singleblog.scala.html
+++ b/app/views/Templates/su/Singleblog.scala.html
@@ -82,7 +82,7 @@
              <!-- Begin .title-wrap -->
             <div class="title-wrap">
               <h3>
-                <a title="@blg.title" href="@routes.Useract.getBlogByPermalink(blg.permaLink)">@blg.title aqui</a>
+                <a title="@blg.title" href="@routes.Useract.getBlogByPermalink(blg.permaLink)">@blg.title</a>
                 
                 
                 
