--- a/app/views/Templates/pagehead.scala.html
+++ b/app/views/Templates/pagehead.scala.html
@@ -9,10 +9,11 @@
 	<meta http-equiv="Expires" content="0" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    @** <meta name="description" content="">
     <meta name="author" content="">
+    **@
     <link rel="shortcut icon" href="@controllers.HomePageImages.imagePathFavicon()">
-
+	
     <title>@titleHead</title>
 	<link href="@routes.Assets.at("bl/css/fonts/fonts.css")" rel="stylesheet" type="text/css">
     <!-- Bootstrap core CSS -->
