--- a/app/views/Templates/su/Singleblog.scala.html
+++ b/app/views/Templates/su/Singleblog.scala.html
@@ -56,7 +56,7 @@
                 </li>
                 <li style="font-size: 12px;">Posted on</li>
                 <li class="date" style="font-size: 12px;">@blg.postedAt</li>
-                <li class="comm-meta" style="font-size: 12px;"><a href="#blog_comment_@{blg.id}">@BlogComment.CommentCount(blg)</a> comments</li>
+                @*<li class="comm-meta" style="font-size: 12px;"><a href="#blog_comment_@{blg.id}">@BlogComment.CommentCount(blg)</a> comments</li>*@
               </ul>
                <div class="clearfix">
               		</div>
