--- a/app/views/Templates/MasterTemplate.scala.html
+++ b/app/views/Templates/MasterTemplate.scala.html
@@ -17,7 +17,8 @@
 </script>
 <meta name="p:domain_verify" content="692f01d77c712372b6dc95e69bec1e5f"/>
 <meta name="msvalidate.01" content="6F4B3593DDD017F33AB355B270116E04" />
-  </head>
+<script type='text/javascript' src='//dsms0mj1bbhn4.cloudfront.net/assets/pub/shareaholic.js' data-shr-siteid='fbcbdaec69e8242ee6275a7117e44ab9' data-cfasync='false' async='async'></script>
+</head>
 
   <body ng-app="bl-master">
     <!-- fb comments ini -->
