--- a/app/views/Templates/su/Singleblog.scala.html
+++ b/app/views/Templates/su/Singleblog.scala.html
@@ -60,6 +60,8 @@
               </ul>
                <div class="clearfix">
               		</div>
+              		<div class='shareaholic-canvas' data-app='share_buttons' data-app-id='20647596'></div>
+              		@*
               <!-- Begin .social -->
               <ul class="social" style="margin-bottom: 15px;">
                 <li><a  href="#"  title="Share on Facebook" 
@@ -75,6 +77,7 @@
               <div class="clearfix">
               </div>
               <!-- End .social -->
+              *@
             </div>
             <!-- end .box -->
             
