all things booze description

--- a/app/views/Templates/su/Singleblog.scala.html
+++ b/app/views/Templates/su/Singleblog.scala.html
@@ -106,7 +106,7 @@
             </div>
            <!--  <a href="javascript:void(0);" class="readmore-js-toggle">Read More</a> -->
             <a href="@routes.Useract.getBlogByPermalink(blg.permaLink)" >Read More</a> 
-            <meta property="og:description" content="@blg.content"/>
+            <meta property="og:description" content="@blg.htmlLessContent"/>
             <!-- End post-excerpt -->
             
             @*
