Ranking System module changes.

--- a/app/views/Templates/pagehead.scala.html
+++ b/app/views/Templates/pagehead.scala.html
@@ -45,6 +45,7 @@
 	<![endif]-->
 	
 	<script src="@routes.Assets.at("bl/js/jquery.min.js")"></script>
+	<script src="@routes.Assets.at("js/jquery.validate.min.js")"></script>
 	<script src="@routes.Assets.at("bl/js/knockout-3.0.0.debug.js")"></script>
 	<script src="@routes.Assets.at("js/knockout.mapping.js")"></script>
 	<script src="@routes.Assets.at("bl/js/jquery-ui-1.10.3.custom.min.js")"></script>
