--- a/app/views/Ranking/addProductsToList.scala.html
+++ b/app/views/Ranking/addProductsToList.scala.html
@@ -51,9 +51,16 @@
 					</div>
 				</form>
 			</div>
+			<div class="col-lg-12 col-12 col-md-12 col-xs-12 col-sm-12"  style="padding-left: 10%;">
+					<div id="no-search-product" class="text-success"  style="color: #a80418"></div>
+					<div id="failure-search-product" class="text-success"  style="color: #ff0000"></div>
+			</div>
 			<div class="col-sm-12" data-bind="visible: searchProducts().length > 0" style="padding-left: 9%;">
-				<div class="col-lg-12 col-sm-12">
+				<div class="col-lg-4 col-sm-4">
 						<h4 class="text-success"  style="color: #a80418"><b>Results</b></h4>
+				</div>
+				<div class="col-lg-4 col-4 col-md-4 col-xs-4 col-sm-4" data-sticky_column>
+					<div id="addRemoveProductErrorMessage" class="text-success"  style="color: #ff0000;margin-top: 20px;margin-bottom: 10px;"></div>
 				</div>
 			</div>
 			
@@ -77,6 +84,10 @@
 	    	}
 	    	
 		    self.init = function() {
+		    	$("#no-search-product").empty();
+				$("#failure-search-product").empty();
+				$("#addRemoveProductErrorMessage").empty();
+				
 				$.getJSON("/getTopCategories", function(data) {
 					console.log(data);
 					self.categories(data);
@@ -91,7 +102,9 @@
 		    }
 		    
 		    self.fetchProducts = function() {
-		    	debugger;
+		    	$("#no-search-product").empty();
+				$("#failure-search-product").empty();
+		    	//debugger;
 		    	var link = window.location.href.split("/");
 		    	var id = link[link.length - 1];
 		    	console.log(id);
@@ -116,6 +129,7 @@
 					
 					
 					if (data.length == 0) {
+						$("#no-search-product").text("No products found.");
 						self.paging.pageNo = -1;
 					} else {
 						$.each(data, function (index, tr) {
@@ -127,12 +141,14 @@
 				});
 				
 				posting.fail(function( data ) {
-					alert(data);	
+					//alert(data);
+					$("#failure-search-product").text("Failed to load Product");	
 					$(".loaderimagediv").hide();
 				});
 		    }
 		    
 		    self.addProduct = function(e) {
+		    	$("#addRemoveProductErrorMessage").empty();
 		    	$(".loaderimagediv").show();
 		    	console.log(e);
 		    	var jsonInput = {
@@ -153,12 +169,14 @@
 					}, 500);
 					self.fetchProductsToAdd();
 				}).fail(function(error) {
+						$("#addRemoveProductErrorMessage").text("Failed to add product");
 						$(".loaderimagediv").hide();
 				});
 					
 		    }
 		    
 		    self.removeProduct = function(e) {
+		    	$("#addRemoveProductErrorMessage").empty();
 				$(".loaderimagediv").show();
 		    	console.log(e);
 		    	console.log("Remove Product");
@@ -176,6 +194,7 @@
 					}, 500);
 					self.fetchProductsToAdd();
 				}).fail(function(error) {
+						$("#addRemoveProductErrorMessage").text("Failed to remove product.");
 						$(".loaderimagediv").hide();
 				});
 		    }
