--- a/app/views/Ranking/adminSingleListPage.scala.html
+++ b/app/views/Ranking/adminSingleListPage.scala.html
@@ -40,9 +40,19 @@
 					<h4 class="text-success"  style="color: #a80418"><b>@listName</b></h4>
 				</div>
 			</div>
+			<div class="col-sm-12" data-bind="visible: productLists().length == 0" style="padding-left: 9%;padding-bottom: 2%;">
+				<div class="col-lg-12 col-sm-12">
+						<h4 class="text-success"  style="color: #a80418">No products found.</h4>
+				</div>
+			</div>
 			<div class="col-sm-12" data-bind="visible: productLists().length > 0" style="padding-left: 9%;padding-bottom: 2%;">
 				<div class="col-lg-12 col-sm-12">
-						<h4 class="text-success"  style="color: #a80418"><b>Product List</b></h4>
+					<div class="col-lg-3 col-sm-3">
+							<h4 class="text-success"  style="color: #a80418"><b>Product List</b></h4>
+					</div>
+					<div class="col-lg-8 col-md-8 col-md-8 col-xs-8 col-sm-8" data-sticky_column>
+						<div id="votingandAvgratingErrorMessage" class="text-success"  style="color: #ff0000;margin-top: 20px;margin-bottom: 10px;"></div>
+					</div>
 				</div>
 				<div class="col-sm-12">
 					<div style="clear: none;" data-bind="template: { name: 'productlist-template', foreach: productLists}"></div>	
@@ -56,13 +66,25 @@
 		var SimpleListModel = function() {
 			self = this;
 		    self.productLists = ko.observableArray([]);
-		    
+		    self.paging = {
+	    		pageSize: 2,
+	    		pageNo: 0
+	    	}
+
 		    self.init = function() {
+		    	$("#votingandAvgratingErrorMessage").empty();
 		    	
-		    	var posting = $.get( "@routes.RankingModuleController.getRankingListProducts(listId)", {}, "json");
+		    	var posting = $.get( "@routes.RankingModuleController.getRankingListProducts(listId)", self.paging, "json");
 				
 				posting.done(function( data ) {
-					self.productLists(data);
+					if (data.length == 0) {
+						self.paging.pageNo = -1;
+					} else {
+						$.each(data, function (index, tr) {
+					    	self.productLists.push(tr);
+					    });	    
+						self.paging.pageNo = self.paging.pageNo + 1;
+					}
 				});
 				
 				posting.fail(function( data ) {	
@@ -79,6 +101,7 @@
 		    }
 		    
 		    self.avgRating_changed = function(e){
+			    $("#votingandAvgratingErrorMessage").empty();
 				console.log("avgRating_changed");
 		    	console.log(e);
 		    	
@@ -93,7 +116,8 @@
 						$(".loaderimagediv").hide();
 					}, 2000);
 				}).fail(function(error) {
-				    alert(error);
+					$("#votingandAvgratingErrorMessage").text("Failed to update Average rating");
+				    //alert(error);
 					setTimeout(function() {
 						$(".loaderimagediv").hide();
 					}, 2000);
@@ -101,6 +125,7 @@
 			}
 		    
 			self.totalVotes_changed = function(e){
+				$("#votingandAvgratingErrorMessage").empty();
 				console.log("totalVotes_changed");
 		    	console.log(e);
 		    	
@@ -116,13 +141,15 @@
 						$(".loaderimagediv").hide();
 					}, 2000);
 				}).fail(function(error) {
-				    alert(error);
+				    //alert(error);
+					$("#votingandAvgratingErrorMessage").text("Failed to update Voting");
 					setTimeout(function() {
 						$(".loaderimagediv").hide();
 					}, 2000);
 				}); 
 			}
 		    self.deleteProductFrommList = function(e) {
+		    	$("#votingandAvgratingErrorMessage").empty();
 		    	console.log("deleteRankingList");
 		    	console.log(e);
 		    	
@@ -130,7 +157,19 @@
 		    		listId: @listId,
 		    		productId: e.productId
 		    	}
-		    	var posting = $.post( "/delete-ranking-list-product/" + e.id, jsonString, "json");
+		    	var posting = $.post( "/delete-ranking-list-product", jsonString, "json",function() {
+				}).done(function(response) {
+					self.paging.pageNo = 0;
+			    	self.init();				
+					setTimeout(function() {
+						$(".loaderimagediv").hide();
+					}, 200);
+				}).fail(function(error) {
+					$("#votingandAvgratingErrorMessage").text("Failed to remove from List");
+					setTimeout(function() {
+						$(".loaderimagediv").hide();
+					}, 200);
+				});
 		    	//remove the product for selected list from ranking_list_product table.
 		    	
 		    };
@@ -140,6 +179,16 @@
 	 	var viewModel = new SimpleListModel();
 		ko.applyBindings(viewModel);
 		viewModel.init();
+		
+		$(window).scroll(function () {
+		  	if ($(window).scrollTop() == $(document).height() - $(window).height()) {
+		  	console.log($(window).scrollTop());
+			console.log($(document).height() - $(window).height());
+				if (viewModel.paging.pageNo != -1) {
+					viewModel.init();
+				}
+			}
+		});
 	}
 
 	<script type="text/html" id="productlist-template">
