--- a/app/views/Ranking/singleListPage.scala.html
+++ b/app/views/Ranking/singleListPage.scala.html
@@ -40,6 +40,14 @@
 				</div>
 			</div>
 			<hr style="border: 2px solid #000;">
+			<div data-bind="visible: listProducts().length == 0">
+				<div class="col-lg-12 col-12 col-md-12 col-xs-12 col-sm-12" data-sticky_column>
+					<h4 class="text-success"  style="color: #a80418">No products found.</h4>
+				</div>
+			</div>
+			<div class="col-lg-12 col-12 col-md-12 col-xs-12 col-sm-12">
+					<div id="failure-voteup" class="text-success"  style="color: #ff0000"></div>
+			</div>
 			<div id="contents" style="padding-left: 3%;">
 				<div data-bind="template: { name: 'productList-template', foreach: listProducts }"></div>
 			</div>
@@ -72,6 +80,7 @@
 				});
 		    }
 		    self.init = function() {
+		    	$("#failure-voteup").empty();
 				$.getJSON("/getRankingListById/@listId", function(data) {
 					self.listName(data.name);
 					self.description(data.description); 
@@ -82,6 +91,7 @@
 		    }.bind(this);  // Ensure that "this" is always this view model
 		    
 		    self.voteForProduct = function(e) {
+		    	$("#failure-voteup").empty();
 		    	$(".loaderimagediv").show();
 		    	console.log(e);
 		    	console.log("Vote Product");
@@ -100,7 +110,8 @@
 					self.listProducts(data);
 				});
 				}).fail(function(error) {
-				    alert(error);
+				    //alert(error);
+				    $("#failure-voteup").text("Failed to update Vote-Up");
 					setTimeout(function() {
 						$(".loaderimagediv").hide();
 					}, 500);
