--- a/app/views/Ranking/addProductsToList.scala.html
+++ b/app/views/Ranking/addProductsToList.scala.html
@@ -1,4 +1,5 @@
 @(listId: Long, listName: String)
+@import play.api.Play
 @import be.objectify.deadbolt.java.views.html._
 @import be.objectify.deadbolt.core.utils.TemplateUtils._
 @import helper._
@@ -79,7 +80,7 @@
 		    self.searchText = "";
 		    
 		    self.paging = {
-	    		pageSize: 2,
+	    		pageSize: @Play.current.configuration.getString("pageSize"),
 	    		pageNo: 0
 	    	}
 	    	
