--- a/app/views/Ranking/adminSingleListPage.scala.html
+++ b/app/views/Ranking/adminSingleListPage.scala.html
@@ -181,7 +181,7 @@
 		viewModel.init();
 		
 		$(window).scroll(function () {
-		  	if ($(window).scrollTop() == $(document).height() - $(window).height()) {
+		  	if ($(window).scrollTop() >= $(document).height() - (window.innerHeight + 700)) {
 		  	console.log($(window).scrollTop());
 			console.log($(document).height() - $(window).height());
 				if (viewModel.paging.pageNo != -1) {
